Ending documentation & refactoring
